--- a/style.css
+++ b/style.css
@@ -1,38 +1,39 @@
+/* Reset and base styles */
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+/* Body and font settings */
 body{
     font-family: "Roboto", 'Arial', sans-serif;
     background-color: #f0f0f0;
     color: #333;
 }
 
+/* Header and navigation bar */
 header{
     background-color: #fff;
     gap: 15px;
     color: #00000099;
 }
-
 header, .logo{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
-
 .logo img{
     height: 34px;
     width: 34px;
     border-radius: 6px;
 }
 
+/* Search box styling */
 .search_box{
     position: relative;
 }
-
 .search_box input{
     height: 34px;
     width: 432px;
@@ -44,7 +45,6 @@ header, .logo{
     margin-left: 2px;
     background-color: #EDF3F8;
 }
-
 .search_box img{
     position: absolute;
     top: 50%;
@@ -55,13 +55,13 @@ header, .logo{
     width: 14px;
 }
 
+/* Navigation icons and links */
 .icon{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
-
 .icon a{
     display: inline-flex;
     flex-direction: column;
@@ -71,17 +71,14 @@ header, .logo{
     margin: 10px;
     font-size: 10px;
 }
-
 ul{
     list-style: none;
     padding: 0;
     display: flex;
 }
-
 li{
     margin: 0 5px;
 }
-
 a span {
     display: block;
     width: 24px;
@@ -89,7 +86,6 @@ a span {
     background-repeat: no-repeat;
     background-position: center;
 }
-
 .lne{
     border-left: 1px solid #3333333f;
     width: 0.5px;
@@ -97,22 +93,20 @@ a span {
 }
 
 /* Navigation icon backgrounds */
-.home span { background-image: url('assets/nav-bar/home.svg'); }
-.Mynetwork span { background-image: url('assets/nav-bar/network.svg'); }
-.jobs span { background-image: url('assets/nav-bar/jobs.svg'); }
-.Messaging span { background-image: url('assets/nav-bar/messaging.svg'); }
-.Notifications span { background-image: url('assets/nav-bar/Notifications.svg'); position: relative; }
-.me span { background-image: url('assets/nav-bar/pfp.png'); }
-.Forbusiness span { background-image: url('assets/nav-bar/business.svg');}
-.Premium span { background-image: url('assets/nav-bar/premium.svg');}
+.home span { background-image: url('/assets/nav-bar/home.svg'); }
+.Mynetwork span { background-image: url('/assets/nav-bar/network.svg'); }
+.jobs span { background-image: url('/assets/nav-bar/jobs.svg'); }
+.Messaging span { background-image: url('/assets/nav-bar/messaging.svg'); }
+.Notifications span { background-image: url('/assets/nav-bar/Notifications.svg'); position: relative; }
+.me span { background-image: url('/assets/nav-bar/pfp.png'); }
+.Forbusiness span { background-image: url('/assets/nav-bar/business.svg');}
+.Premium span { background-image: url('/assets/nav-bar/premium.svg');}
 
-/* Icon with badge container */
+/* Notification badge and caret styles */
 .icon_container{
     position: relative;
     display: inline-block;
 }
-
-/* Notification badge style */
 .badge{
     position: absolute;
     width: 14px;
@@ -131,8 +125,6 @@ a span {
     opacity: 0.85;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-
-/* Caret (dropdown arrow) style */
 .caret{
     position: absolute;
     bottom: 10px;
@@ -148,7 +140,7 @@ a span {
     color: #333;
 }
 
-/* Profile section styling */
+/* Main profile section layout */
 .profile_sec{
     display: flex;
     flex-direction: row;
@@ -157,24 +149,23 @@ a span {
     gap: 24px;
     margin-top: 20px;
 }
-
 .main-left {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-/* Section A styling */
+/* Section A: Profile cover and info */
 .section-a{
     width: 804px;
-    height: 520.5px;
+    height: 540.5px;
+    justify-content: center;
     background-color: #fff;
     box-shadow: 0 0 0 1px #8C8C8C33;
     border-radius: 8px;
     /* padding: 8px 24px; */
     position: relative;
 }
-
 .cover {
     display: flex;
     align-items: flex-end;
@@ -184,7 +175,7 @@ a span {
     height: 201px;
     width: 100%;
     border-radius: 8px 8px 0px 0px;
-    background: url(assets/header/Cover_photo.png) center/cover no-repeat;
+    background: url(/assets/header/Cover_photo.png) center/cover no-repeat;
 }
 .cover .pfp img {
     position: absolute;
@@ -196,7 +187,6 @@ a span {
     border: 4px solid #fff;
     margin-top: 50px; /* Adjust to overlap the cover */
 }
-
 .pfp img:last-of-type {
     position: relative;
     height: 40px;
@@ -204,9 +194,8 @@ a span {
     border: none;
     margin-left: 726px;
 }
-.edtt{
-    cursor: pointer;
-}
+
+/* Profile info and brand section */
 .ctn{
     display: flex;
     flex-direction: row;
@@ -246,7 +235,7 @@ a span {
     color: #0A66C2;
     margin-top: 8px;
 }
-a{
+.main-btm a{
     text-decoration: none;
     color: #0A66C2;
     font-weight: 500;
@@ -255,110 +244,119 @@ a{
     height: 72px;
 }
 
+/* Bottom container in section-a */
 .btm-ctn{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 8px 24px;
-    font-size: 14px;
 }
 .btm-ctn div{
     background-color: #DDE7F1;
     width: 366px;
     height: 77.5px;
     border-radius: 8px;
-    padding: 12px;
 }
-.btm-ctn div p{
-    color: #333;
-}
-.btm-ctn p.heading{
-    font-weight: 700;
-}
-/* Section B styling */
+
+/* Section B and C: Additional profile info */
 .section-b,
 .section-c {
     width: 804px;
-    height: 237px;
+    height: 125px;
     justify-content: center;
     background-color: #fff;
     box-shadow: 0 0 0 1px #8C8C8C33;
     border-radius: 8px;
     padding: 8px 24px;
-    display: grid;
-    place-items: center;
 }
 
-.abt-btm{
-    /* margin-bottom: 20px; */
-    font-size: 13px;
-    line-height: 19px;
+/* Section D: Sidebar profile details */
+.section-d {
+    /* This is the styling for section d of the main page */
+    width: 300px;
+    height: 186px;
+    justify-content: center;
+    background-color: #fff;
+    padding: 15px;
+    max-width: 100%;
+    border-radius: 8px;
+    font-size: 14px;
+    box-shadow: 0 0 0 1px #8C8C8C33;
+}
+.section-d p {
+    margin: 0;
 }
 
-.abt-btm .wrp{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.abt-btm p.header{
-    font-weight: 600;
-    font-size: 20px;
-    color: #333;
-}
-.abt-btm .dtl{
-    color: #00000099;
-    margin-left: 197px;
-}
-.tp-skls{
+/* Edit icon and buttons */
+.edt{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 756px;
-    height: 88px;
-    padding: 12px;
-    margin-top: 12px;
-    border: 1px solid #ccc;
+    height: 100%;
 }
-.tp-skls p{
-    display: inline-block;
-} 
-.tp-skls .info p.heading{
-    font-size: 15px;
-    font-weight: 600;
+.edt img{
+    margin-left: auto;
 }
-.section.wrp{
-    max-height: 100%;
+.section-d button{
+    background-color: #01754F;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 16px;
+    cursor: pointer;
+    font-size: 14px;
+    width: 130px;
+    height: 32px;
+    margin-right: 2px;
+    font-weight: bold;
 }
-.tp-skls section.info-wrp{
+.section-d button:nth-of-type(2) {
+    background-color: transparent;
+    color: #333;
+    border: 1.5px solid #ccc;
+    outline: none;
+}
+.section-d p.heading {
+    color: #333 !important; /* or your preferred heading color */
+    font-weight: bold;
+    font-size: 18px;
+}
+.section-d section:nth-of-type(2) p:last-of-type {
+    color: #00000099;
+}
+
+/* Message and More buttons */
+.btns .message {
     position: relative;
+    background-color: #0A66C2; /* same as .connect */
+    color: #fff;
+    border: none;
+    border-radius: 16px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 114px;
+    height: 32px;
+    margin-right: 2px;
+    margin-top: 10px;
 }
-.tp-skls section.info-wrp p.heading{
-    position: absolute;
-    top: 6px;
+.message .paper-plane {
+    position: relative;
+    top: 2px; /* move icon down slightly */
 }
-.tp-skls .info{
-    display: flex;
-    justify-content: flex-start;
-    align-self: start;
+.more {
+    background-color: transparent;
+    color: #333;
+    border: 1.5px solid #ccc;
+    outline: none;
+    border-radius: 16px;
+    cursor: pointer;
+    font-size: 14px;
+    width: 71px;
+    height: 32px;
 }
-.tp-skls section.wrp{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.tp-skls section.wrp .sub-heading{
-    font-size: 13px;
-}
-.section-c {
-    height: 170px;
-    display: grid;
-    place-items: center;
-}
-.section-c .crt{
-    display: flex;
-    flex-direction: column;
+main{
+    margin: 20px 0;
 }
 .section-c .svr{
     font-size: 12px;
